--- a/资1-3.md
+++ b/资1-3.md
@@ -6,3 +6,5 @@
 
 个人为社会他人生产提供某种有价值的服务，社会是分工运行的，了解明白服务产业上下整个系统如何运行，从某个环节切入参与。
 
+确定服务对象，服务对象需要什么服务，服务对象可以选择的provider有多少，我可以提供什么，别人可以提供什么，为什么会选择我提供的服务，如何建立信任如何维持关系。
+
