--- a/资1-3.md
+++ b/资1-3.md
@@ -9,7 +9,7 @@
 确定服务对象，服务对象需要什么服务，服务对象可以选择的provider有多少，我可以投入什么产出什么提供给对方，别人可以提供什么产出什么提供给对方，为什么会选择我提供的服务，如何建立信任如何维持关系。
 
 
-*短视频平台和短视频平台用户，平台需要内容创作带来的流量，每个人都可以成为内容创造者，我主要投入（剪辑工具创作关于某项主题用户感兴趣的内容作品）产出内容供给用户，*
+*短视频平台和短视频平台用户，平台需要内容创作带来的流量，每个人都可以成为内容创造者，我主要投入（剪辑工具创作关于某项主题用户感兴趣的内容作品）产出内容供给用户*
 
 
 ##
