--- a/资1-3.md
+++ b/资1-3.md
@@ -3,6 +3,7 @@
 从生活中最直接可见的这一事物切入。
 从两个角度考量商品，商品本身有使用价值，商品包含 人类的 社会必要劳动 有交换价值。
 商品要能为社会（他人）提供价值才能用来交换。
+各种生产和有用劳动的发展，形成了社会分工。
 
 个人为社会他人生产提供某种有价值的服务，社会是分工运行的，了解明白服务产业上下整个系统如何运行，从某个环节切入参与。
 
