--- a/资1-3.md
+++ b/资1-3.md
@@ -5,6 +5,10 @@
 商品要能为社会（他人）提供价值才能用来交换。
 各种生产和有用劳动的发展，形成了社会分工。
 
+复杂劳动 可看作一定量的简单劳动，就价值量而言，两种劳动主要是量多少的问题
+劳动 形成或带来了 商品的价值和商品的使用价值。
+商品的价值 要带入到视频与社会的关系才表现出来。商品有一种表现形式—货币钱。
+
 个人为社会他人生产提供某种有价值的服务，社会是分工运行的，了解明白服务产业上下整个系统如何运行，从某个环节切入参与。
 
 确定服务对象，服务对象需要什么服务，服务对象可以选择的provider有多少，我可以投入什么产出什么提供给对方，别人可以提供什么产出什么提供给对方，为什么会选择我提供的服务，如何建立信任如何维持关系。
