--- a/资1-3.md
+++ b/资1-3.md
@@ -7,7 +7,7 @@
 
 复杂劳动 可看作一定量的简单劳动，就价值量而言，两种劳动主要是量多少的问题
 劳动 形成或带来了 商品的价值和商品的使用价值。
-商品的价值 要带入到视频与社会的关系才表现出来。商品有一种表现形式—货币钱。
+商品的价值 要带入到商品与社会的关系才表现出来。商品有一种表现形式—货币钱。
 
 个人为社会他人生产提供某种有价值的服务，社会是分工运行的，了解明白服务产业上下整个系统如何运行，从某个环节切入参与。
 
