--- a/资1-3.md
+++ b/资1-3.md
@@ -1,5 +1,5 @@
 ##
-开篇提到了商品，资产阶级占社会财富统治地位的明显表现，商品大量堆积。
+开篇提到了商品，资产阶级占社会财富统治地位的明显表现，商品大量堆积。产能过剩。
 从生活中最直接可见的这一事物切入。
 从两个角度考量商品，商品本身有使用价值，商品包含 人类的 社会必要劳动 有交换价值。
 商品要能为社会（他人）提供价值才能用来交换。
@@ -9,7 +9,7 @@
 劳动 形成或带来了 商品的价值和商品的使用价值。
 商品的价值 要带入到商品与社会的关系才表现出来。价值有相对价值表现形式。商品价值有一种等价表现形式—货币钱。💰 不是只同另一种个别商品发生社会关系，而是同整个商品世界发生社会关系。商品的价值，一般等价物表现形式，还是离不开社会生产。价值离不开当下的社会生产。
 
-个人为社会他人生产提供某种有价值的服务，社会是分工运行的，了解明白服务产业上下整个系统如何运行，从某个环节切入参与。
+个人为社会他人生产提供某种有价值的服务，社会是分工运行的，了解明白服务产业上下整个系统如何运行，从某个环节切入参与。商业逻辑 服务价值交换。
 
 确定服务对象，服务对象需要什么服务，服务对象可以选择的provider有多少，我可以投入什么产出什么提供给对方，别人可以提供什么产出什么提供给对方，为什么会选择我提供的服务，如何建立信任如何维持关系。
 
