--- a/资1-3.md
+++ b/资1-3.md
@@ -7,7 +7,10 @@
 
 复杂劳动 可看作一定量的简单劳动，就价值量而言，两种劳动主要是量多少的问题
 劳动 形成或带来了 商品的价值和商品的使用价值。
-商品的价值 要带入到商品与社会的关系才表现出来。价值有相对价值表现形式。商品价值有一种等价表现形式—货币钱。💰 不是只同另一种个别商品发生社会关系，而是同整个商品世界发生社会关系。商品的价值，一般等价物表现形式，还是离不开社会生产。价值离不开当下的社会生产。
+商品的价值 要带入到商品与社会的关系才表现出来。价值有相对价值表现形式。商品价值有一种等价表现形式—货币钱。💰 不是只同另一种个别商品发生社会关系，而是同整个商品世界发生社会关系。商品的价值，一般等价物表现形式，还是离不开社会生产。价值离不开当下的社会生产。对价值形式的讨论指出了货币（对价值形式的讨论旨在揭示商品如何从简单价值形式演变为货币。他追溯了从简单价值形式到扩展形式，再到一般形式的发展过程，展示了这个过程是商品交换中货币作为普遍等价物出现的重要一环。理解这些价值形式有助于阐明货币在资本主义经济中的角色。
+）
+
+
 
 个人为社会他人生产提供某种有价值的服务，社会是分工运行的，了解明白服务产业上下整个系统如何运行，从某个环节切入参与。商业逻辑 服务价值交换。
 
