--- a/资1-3.md
+++ b/资1-3.md
@@ -7,10 +7,16 @@
 
 复杂劳动 可看作一定量的简单劳动，就价值量而言，两种劳动主要是量多少的问题
 劳动 形成或带来了 商品的价值和商品的使用价值。
-商品的价值 要带入到商品与社会的关系才表现出来。价值有相对价值表现形式。商品价值有一种等价表现形式—货币钱。💰 不是只同另一种个别商品发生社会关系，而是同整个商品世界发生社会关系。商品的价值，一般等价物表现形式，还是离不开社会生产。价值离不开当下的社会生产。对价值形式的讨论指出了货币（对价值形式的讨论旨在揭示商品如何从简单价值形式演变为货币。他追溯了从简单价值形式到扩展形式，再到一般形式的发展过程，展示了这个过程是商品交换中货币作为普遍等价物出现的重要一环。理解这些价值形式有助于阐明货币在资本主义经济中的角色。
-）
+商品的价值 要带入到商品与社会的关系才表现出来。价值有相对价值表现形式。商品价值有一种等价表现形式—货币钱。💰 不是只同另一种个别商品发生社会关系，而是同整个商品世界发生社会关系。商品的价值，一般等价物表现形式，还是离不开社会生产。价值离不开当下的社会生产。对价值形式的讨论指出了货币（对价值形式的讨论旨在揭示商品如何从简单价值形式演变为货币。他追溯了从简单价值形式到扩展形式，再到一般形式的发展过程，展示了这个过程是商品交换中货币作为普遍等价物出现的重要一环。理解这些价值形式有助于阐明货币在资本主义经济中的角色。）
 
+##
+1. **"价值量由劳动时间决定是一个隐藏在商品相对价值的表面运动后面的秘密。"**：这部分指的是商品价值的内在决定因素是劳动时间。尽管商品在交换中表现为相对价值的变动，但这背后的决定性因素是商品的生产所需的劳动时间。
 
+2. **"这个秘密的发现，消除了劳动产品的价值量纯粹是偶然决定的这种假象，"**：指的是通过揭示商品价值由劳动时间决定，消除了商品价值是偶然决定的观念。马克思认为，商品价值并非随机的或纯粹由市场决定，而是有其内在的决定性因素。
+
+3. **"但是决没有消除价值量的决定所采取的物的形式。"**：这部分意味着虽然揭示了价值由劳动时间决定，但并没有消除价值表现为特定商品形式的事实。在交换中，商品的价值表现为其他商品的相对价值，这种形式依然存在。
+
+马克思对商品价值形成的理论观点，即商品的价值虽然由劳动时间决定，但在交换中它表现为特定的相对价值形式。这一观点有助于理解商品价值的内在机制以及在资本主义经济中价值是如何体现和流动的。
 
 个人为社会他人生产提供某种有价值的服务，社会是分工运行的，了解明白服务产业上下整个系统如何运行，从某个环节切入参与。商业逻辑 服务价值交换。
 
